--- a/Content/Mechanical Assembly.tex
+++ b/Content/Mechanical Assembly.tex
@@ -2,3 +2,43 @@
 
 \graphicspath{{./Figures/Modeling}}
 
+\begin{itemize}
+	\item Intro Overview of the chapter.
+	\item Importance of mechanical assembly in the overall project.
+\end{itemize}
+
+
+\section{Components Overview}
+\begin{itemize}
+\item Detailed description of all mechanical components used in the robot.
+\item Source or method of fabrication for each component (e.g., machined parts, 3D printed elements).
+\end{itemize}
+\section{Assembly Process}
+\begin{itemize}
+\item Step-by-step explanation of the assembly process.
+\item Tools and techniques used in the assembly.
+\item Assembly sequence and rationale behind it.
+\end{itemize}
+\section{Integration of Mechanical and Electronic Systems}
+\begin{itemize}
+\item Discussion on how mechanical components interface with electronic systems.
+\item Challenges faced in integration and strategies employed to overcome them.
+\end{itemize}
+\section{Troubleshooting and Problem Solving}
+\begin{itemize}
+\item Discussion of any unexpected challenges or issues faced during assembly.
+\item How these issues were diagnosed and resolved.
+\end{itemize}
+\section{Safety Considerations}
+\begin{itemize}
+	\item Safety measures taken during the assembly process.
+	\item Design considerations for ensuring the operational safety of the robot.
+\end{itemize}
+\begin{itemize}
+	\item \textbf{Discrete Numerical Simulation:} Elaboration on the process of discrete numerical simulation, including the discrete double integration method to arrive at the state vector.
+\end{itemize}
+
+\begin{notebox}
+	the bolts used the problem to shorten them so that it wouldn't touch the motor 
+\end{notebox}
+
