--- a/Content/Electronic Design.tex
+++ b/Content/Electronic Design.tex
@@ -3,39 +3,35 @@
 \graphicspath{{./Figures/Modeling}}
 
 
-
 \begin{itemize}
-	\item Outline the purpose and scope of the chapter.
-	\item Briefly describe the mechanical design's role in the overall project.
+	\item Overview of the chapter's focus.
+	\item Emphasize the importance of electronic design in the context of the overall project.
 \end{itemize}
 
 
-\section{Design Objectives and Requirements}
+\section{Design Objectives and Constraints}
 \begin{itemize}
-	\item Detail the primary objectives of the mechanical design
-	\item List the requirements that the design must meet (e.g., weight limits, size constraints, mobility requirements).
+	\item Clearly define the objectives and goals for the electronic design
+	\item Discuss any constraints such as power requirements, size limitations.
 \end{itemize}
-\section{Assembly Process}
+\section{Component Selection}
 \begin{itemize}
-	\item Step-by-step explanation of the assembly process.
-	\item Tools and techniques used in the assembly.
-	\item Assembly sequence and rationale behind it.
+	\item Detail the selection process for key electronic components like microcontrollers, sensors, actuators, power supplies, etc.
+	\item Rationale behind the choice of each component, focusing on specifications and performance requirements.
 \end{itemize}
-\section{Integration of Mechanical and Electronic Systems}
+\section{Circuit Design}
 \begin{itemize}
-	\item Discussion on how mechanical components interface with electronic systems.
-	\item Challenges faced in integration and strategies employed to overcome them.
+	\item Provide comprehensive information about the circuit design, including schematic diagrams.
+	\item Explain the functionality and interaction of different circuit components.
+	\item Discuss the design considerations for signal integrity, power distribution, and noise reduction.
 \end{itemize}
-\section{Troubleshooting and Problem Solving}
+\section{PCB (Printed Circuit Board) Design}
 \begin{itemize}
-	\item Discussion of any unexpected challenges or issues faced during assembly.
-	\item How these issues were diagnosed and resolved.
+	\item Describe the layout and design of any custom PCBs used in the project.
+	\item Include information about PCB fabrication and assembly processes.
 \end{itemize}
-\section{Safety Considerations}
+\section{Power Management}
 \begin{itemize}
-	\item Safety measures taken during the assembly process.
-	\item Design considerations for ensuring the operational safety of the robot.
-\end{itemize}
-\begin{itemize}
-	\item \textbf{Discrete Numerical Simulation:} Elaboration on the process of discrete numerical simulation, including the discrete double integration method to arrive at the state vector.
+	\item Discuss how power is managed and distributed within the system.
+	\item Include details on battery management, voltage regulation, and power efficiency considerations.
 \end{itemize}
