--- a/Content/Firmware and Testing.tex
+++ b/Content/Firmware and Testing.tex
@@ -2,3 +2,45 @@
 
 \graphicspath{{./Figures/Modeling}}
 
+\begin{itemize}
+	\item Overview of the chapter's content and its significance in the context of the overall project.
+	\item Briefly state the objectives of firmware development and testing procedures.
+\end{itemize}
+
+
+\section{Firmware Development}
+\begin{itemize}
+	\item Discuss the development environment and tools used for firmware programming.
+	\item Detail the architecture and design of the firmware, including flowcharts or state  diagrams if applicable.
+	\item Explain the implementation of key functionalities such as control algorithms, sensor integration, and actuator management.
+\end{itemize}
+\section{Programming Languages and Tools}
+\begin{itemize}
+	\item List and describe the programming languages used for firmware development.
+	\item Mention any specific software tools, libraries, or frameworks employed.
+\end{itemize}
+\section{Integration with Hardware}
+\begin{itemize}
+	\item Discuss how the firmware interacts with and controls the hardware components.
+	\item Explain any challenges encountered in integration and how they were resolved.
+\end{itemize}
+\section{Testing Framework and Methodology}
+\begin{itemize}
+	\item Outline the testing framework used to validate the firmware.
+	\item Describe the methodology for functional testing, including unit tests, integration tests, and system-level tests.
+\end{itemize}
+\section{Test Cases and Scenarios}
+\begin{itemize}
+	\item Present the results of the testing procedures.
+	\item Analyze these results, highlighting successful areas and identifying any issues or bugs discovered.
+\end{itemize}
+\section{Debugging and Troubleshooting}
+\begin{itemize}
+	\item Discuss the process of debugging and troubleshooting encountered problems.
+	\item Explain how issues were diagnosed and resolved.
+\end{itemize}
+
+\begin{notebox}
+	the bolts used the problem to shorten them so that it wouldn't touch the motor 
+\end{notebox}
+
