--- a/Content/Literature Review.tex
+++ b/Content/Literature Review.tex
@@ -1,114 +1,10 @@
-\chapter{Random}
+\chapter{Literature Review}
 
 \graphicspath{{./Figures/Modeling}}
 
-Questions to answer in each section 
 
+\section{Overview of Two-Wheeled Inverted Pendulum Robots}
+\section{Prior Works and Advances in Multi-Legged Robotic Systems}
+This section should provide a comprehensive review of existing literature relevant to your research topic. It should cover key theories, models, experiments, and findings in the field, particularly focusing on works that directly relate to your research question or hypothesis. This review not only shows your understanding of the field but also how your work fits into and contributes to the existing body of knowledge.
+\section{State-of-the-Art in Robotic Control Systems}
 
-\begin{enumerate}
-	\item what is going to be in here?
-	\item how long or how elaborate?
-	\item what is the purpose (the take home message)? 
-\end{enumerate}
-
-
-
-
-
-Table of content Draft
-\begin{enumerate}
-	\item Introduction
-	\begin{enumerate}
-		\item Background and Motivation
-		\begin{enumerate}
-			\item Discuss the evolution and significance of robotics in various industries.
-			\item Emphasize the need for advancements in robotic stability and mobility.
-		\end{enumerate}
-
-		\item Problem Statement
-		\begin{enumerate}
-			\item Define the specific challenges in designing a legged self-balancing robot.
-		\end{enumerate}
-		\item Objectives(Outline the primary goals of the thesis)
-	\end{enumerate}
-	\item Literature Review
-	\begin{enumerate}
-		\item Overview of Robotics
-		\item Previous Work in Self-Balancing Robots
-		\item Control Strategies 
-		\begin{enumerate}
-			\item what is going to be in here? a comparison of the control strategies used.
-			\item how long or how elaborate? not too detailed but with more explanation of the control theory used in the project
-			\item what is the purpose (the take home message)? pros and cons of the different and why would we prefer one of them over the other depending on the applications
-		\end{enumerate}
-	\end{enumerate}
-	\item Design and Development of the Robot
-	\begin{enumerate}
-		\item Mechanical Design
-		\begin{enumerate}
-			\item Initial calculations 
-			\begin{enumerate}
-				\item what is going to be in here? -> torque initial calculations
-				\item how long or how elaborate? -> two or three scenarios
-				\item what is the purpose (the take home message)? for choosing the correct motors 
-			\end{enumerate}
-			\item design 
-		\begin{enumerate}
-				\item what is going to be in here?-> CAD design and the explanations of the challenges 
-				\item how long or how elaborate? detailed explanations of the reason behind the design decision
-				\item what is the purpose (the take home message)? assembling the robot with fitting parts to match the new model requirements  
-			\end{enumerate}
-			\item Modeling 
-			\begin{enumerate}
-				\item what is going to be in here?-> the figures for the new model and the new COG and MOI calculations and the equations of motion.  
-				\item how long or how elaborate? 4 to 5 pages explaining the equations in details 
-				\item what is the purpose (the take home message)? showing the calculations for the new model and it would influence the equations of motion.
-			\end{enumerate}
-		\end{enumerate}
-		\item Electrical Design
-		\begin{enumerate}
-			\item what is going to be in here? Component diagram showing the choice of all the components and there intended use and why we chose each of these components 
-			\item how long or how elaborate? detailed explanation of the  requirement boards for operating the robot, the choice of components based calculations for the motors.
-			\item what is the purpose (the take home message)? show how the Electrical design is configured in the optimal way to operate the robot 
-		\end{enumerate}
-		\item Software and Control
-		\begin{enumerate}
-			\item Control Algorithm 
-			\begin{enumerate}
-				\item what is going to be in here?->flowchart of the Control Algorithm
-				\item how long or how elaborate?-> detailed explanation of the used control theory 
-				\item what is the purpose (the take home message)? -> how the control is implemented 
-			\end{enumerate}
-			\item Firmware
-		\end{enumerate}
-		\item Safety 
-		\begin{enumerate}
-			\item what is going to be in here? different design changes for safety measures(motors covers, wire routing, body bumper, distance sensor , algorithm safety, electrical safety )
-			\item how long or how elaborate? 1 or two pages max that include the 
-			\item what is the purpose (the take home message)? the safety measures taken to minimize crashes, failure
-		\end{enumerate}
-	\end{enumerate}
-	\item Experimental Setup and Methodology
-	\begin{enumerate}
-		\item Simulation Environment
-		\item Physical Prototype Testing
-		\item Data Collection and Analysis
-	\end{enumerate}
-	\item Results and Discussion
-	\begin{enumerate}
-		\item Simulation Results
-		\item Real-world Performance
-		\item Comparison and Analysis
-	\end{enumerate}
-	\item Conclusion and Future Work
-	\begin{enumerate}
-		\item Summary of Findings
-		\item Contributions
-		\item Recommendations for Future Research
-	\end{enumerate}
-\end{enumerate}
-
-
-\begin{todobox}
-	content..
-\end{todobox}
