--- a/Content/Modelling and Simulation.tex
+++ b/Content/Modelling and Simulation.tex
@@ -8,6 +8,11 @@ In this pivotal chapter, we meticulously derive the center of gravity and the mo
 \section{Mathematical Modelling}
 \begin{itemize}
 	\item \textbf{TWIPR Model:} Explanation of the Two-Wheeled Inverted Pendulum Robot (TWIPR) model.
+	
+	
+	The two wheeled Inverted Pendulum robot model is as shown in the figure where it consist of two legs that include a hip and knee joints as well as wheels at the end of each leg.
+	the robot needs to constantly adjust it posture to be able to maintain the balance, just like how the humanbeing balance when standing on the feet.
+	
 	\item \textbf{Focus on 2D Dynamics:} Discussion on the scope limited to 2D dynamics and plans for future expansion to 3D dynamics and controller synthesis.
 	\item \textbf{Assumptions and Parameters:} Detailing assumptions such as considering motor angles as parameters.
 	\item \textbf{Model Derivation for \textit{l\_cg} and \textit{I\_y}:} Derivation of the models for center of gravity length (\textit{l\_cg}) and inertia around the y-axis (\textit{I\_y}).
