--- a/Content/Electronic Design.tex
+++ b/Content/Electronic Design.tex
@@ -1,8 +1,15 @@
 \chapter{Electronic Design}
 
-\graphicspath{{./Figures/Modeling}}
+\graphicspath{{./Figures/Electronic Design/}}
 
-
+%figure of the electronic design
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=1\linewidth]{Legged_TWIPR_Wiring_Tree}
+	%\includegraphics[width=0.5\linewidth]{Figures/Mechanical Design/Conceptual_Design}
+	\caption{Electronic Design}
+	\label{fig:electronicdesign}
+\end{figure}
 \begin{itemize}
 	\item Overview of the chapter's focus.
 	\item Emphasize the importance of electronic design in the context of the overall project.
