--- a/Content/Modelling and Simulation.tex
+++ b/Content/Modelling and Simulation.tex
@@ -19,19 +19,37 @@ In this pivotal chapter, we meticulously derive the center of gravity and the mo
 	\item \textbf{Integration into TWIPR Model:} Integration of derived models into a new TWIPR framework.
 	\item \textbf{Linear Model Derivation:} Derivation of the linear model from the integrated TWIPR model.
 	
-	$\bullet$ Modeling allows for predictive analysis and understanding of the robot's behavior.
+	\item Modeling allows for predictive analysis and understanding of the robot's behavior.
 	
 	In order to predict the behavior of the robot under different settings, the modeling procedure entails constructing mathematical representations of the robot's dynamics and control systems.
+\end{itemize}
 	
-	
-	
+%
+%	\begin{figure}[h]
+%		\centering
+%		\includegraphics[width=.5\textwidth]{/Figures/Modeling/Model}
+%		\caption[Mechanical model with the local coordinate system]{Figure illustrating the mechanical model with the local coordinate system to determine the center of gravity.}
+%		\label{Mechanical model with the local coordinate system}
+%	\end{figure}
+%figure of the model
+%	\begin{figure}[h]
+%		\centering
+%		\includegraphics[width=.5\textwidth]{Figures/Modeling/Model}
+%		\caption[Mechanical model with the local coordinate system]{Figure illustrating the mechanical model with the local coordinate system to determine the center of gravity.}
+%		\label{Mechanical model with the local coordinate system}
+%	\end{figure}
+
+
+	% input the model figure from the graphics path
 	\begin{figure}[h]
 		\centering
-		\includegraphics[width=.5\textwidth]{/Model}
+		\includegraphics[width=.5\textwidth]{Model}
 		\caption[Mechanical model with the local coordinate system]{Figure illustrating the mechanical model with the local coordinate system to determine the center of gravity.}
 		\label{Mechanical model with the local coordinate system}
 	\end{figure}
-	
+
+
+
 	%Center of Gravity
 	Center of Gravity calculations 
 	\subsection{Center of Gravity } 
@@ -83,9 +101,9 @@ In this pivotal chapter, we meticulously derive the center of gravity and the mo
 	
 	\begin{figure}[h]
 		\centering
-		\includegraphics[width=.5\textwidth]{/Angles}
+		\includegraphics[width=.5\textwidth]{Angles}
 		\caption[Moment of inertia Schematic representation]{Schematic representation detailing the requisite angles and lengths for calculating the moment of inertia.}
-		\label{fig:Schematic representation detailing the requisite angles and lengths for calculating the moment of inertia.}
+		\label{fig:Schematic representation xxxxx detailing the requisite angles and lengths for calculating the moment of inertia.}
 	\end{figure}
 	
 	\subsection{Moment of inertia}
@@ -226,7 +244,7 @@ In this pivotal chapter, we meticulously derive the center of gravity and the mo
 			\bottomrule
 		\end{tabular}
 	\end{table}
-\end{itemize}
+
 
 \section{Numerical Simulation}
 \begin{itemize}
