--- a/Content/Electronic Design.tex
+++ b/Content/Electronic Design.tex
@@ -1,13 +1,13 @@
 \chapter{Electronic Design}
 
 \graphicspath{{./Figures/Electronic Design/}}
-
+In this chapter, the details of the electronic design are presented. where it goes from the initial conceptual design to the final design showing in the process the design decision-making for each critical point, This chapter emphasis the detailed description of the precise placement and alignment of different components such as the microcontrollers, sensors, actuators, power supplies, and others to maintain the seamless integration of all the components into the robot body.
 %figure of the electronic design
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{Legged_TWIPR_Wiring_Tree}
 	%\includegraphics[width=0.5\linewidth]{Figures/Mechanical Design/Conceptual_Design}
-	\caption{Electronic Design}
+	\caption[between brakets for delectronic design second test ]{Electronic Design}
 	\label{fig:electronicdesign}
 \end{figure}
 \begin{itemize}
