--- a/Content/Mechanical Design.tex
+++ b/Content/Mechanical Design.tex
@@ -27,23 +27,27 @@ The mechanical design serves as an important pillar to define the new physical f
 As for the initial design concepts the body was that main point of focus as shown in the figure.Three initial designs where considered mainly for the body.\ Symmetrical vertical body in figure A, symmetrical horizontal body in figure B and leaning forward body in figure C.
 \ For the three designs, two independent legs where considered.
 two designs where considered for the legs, the normal joint leg and the compliant leg
-% figure of the initial design concepts
+
+ figure of the initial design concepts
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{Conceptual Design}
 	%\includegraphics[width=0.5\linewidth]{Figures/Mechanical Design/Conceptual_Design}
-	\caption{Initial Design Concepts}
+	\caption[Initial Design Concepts TEST]{Three initial Design Concepts for the robot body}
 	\label{fig:initialdesigns}
 \end{figure}
 
+
+
 the compliant leg is more flexible and can be used to absorb the shock from the ground.\ The normal joint leg is more rigid and can be used to generate more torque.in addition, the normal is more relative to our use-case as it can precisely control the position of the leg.
+
+
 % figure for the leg designs
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.4\linewidth]{Leg Design}
-	%\includegraphics[width=0.5\linewidth]{Figures/Mechanical Design/Conceptual_Design}
-	\caption{Leg Designs}
-	\label{fig:legdesigns}
+	\caption[between brakets for leg design]{Leg different Designs }
+	\label{fig:legdesignsjbhi}
 \end{figure}
 
 
